--- a/_config.yml
+++ b/_config.yml
@@ -6,17 +6,16 @@
 title: St.kai‘s blog
 subtitle: ''
 description: ''
-keywords:
+keywords: null
 author: St.kai
 language: zh-CN
-timezone: 'Asia/Shanghai'
-
+timezone: Asia/Shanghai
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: https://github.com/Stkai/Stkai.github.io
+url: 'https://github.com/Stkai/Stkai.github.io'
 root: /
-permalink: :year/:month/:day/:title/
-permalink_defaults:
+permalink: ':year/:month/:day/:title/'
+permalink_defaults: null
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
   trailing_html: true # Set to false to remove trailing '.html' from permalinks
@@ -28,11 +27,11 @@ tag_dir: tags
 archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
-i18n_dir: :lang
-skip_render:
+i18n_dir: ':lang'
+skip_render: null
 
 # Writing
-new_post_name: :title.md # File name of new posts
+new_post_name: ':title.md' # File name of new posts
 default_layout: post
 titlecase: false # Transform title into titlecase
 external_link:
@@ -64,12 +63,12 @@ prismjs:
 index_generator:
   path: ''
   per_page: 10
-  order_by: -date
+  order_by: '-date'
 
-# Category & Tag
+  # Category & Tag
 default_category: uncategorized
-category_map:
-tag_map:
+category_map: null
+tag_map: null
 
 # Metadata elements
 ## https://developer.mozilla.org/en-US/docs/Web/HTML/Element/meta
@@ -80,9 +79,9 @@ meta_generator: true
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
-time_format: HH:mm:ss
+time_format: 'HH:mm:ss'
 ## updated_option supports 'mtime', 'date', 'empty'
-updated_option: 'mtime'
+updated_option: mtime
 
 # Pagination
 ## Set per_page to 0 to disable pagination
@@ -91,9 +90,9 @@ pagination_dir: page
 
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
-include:
-exclude:
-ignore:
+include: null
+exclude: null
+ignore: null
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
@@ -104,4 +103,4 @@ theme: icarus
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: git@github.com:Stkai/Stkai.github.io.git
+  repo: 'git@github.com:Stkai/Stkai.github.io.git'
